--- a/platforms/android/assets/www/css/music.css
+++ b/platforms/android/assets/www/css/music.css
@@ -20,10 +20,16 @@ span,label{font-size:14px}
 
 #footer{position: fixed;left:0;bottom: 0;right: 0;padding: 10px;background: #000;z-index: 10;color: #fff;}
 .m_footer{display: flex;height: 4.2em;justify-content: center;align-items: center;}
-.play-status{flex:3;padding: 3px 0;}
+.play-status{flex:3;padding: 3px 0;position: relative;}
+.m_footer .time{position: absolute;right: 0;top: 5px;}
 .p_icon{flex:1;}
 .p_icon img{width: 60px;height: 60px;border-radius: 50%;}
-.m_footer progress{width: 260px;height: 4px;}
+.p_icon img.playing{animation:rotatePic 10s linear infinite;}
+@keyframes rotatePic {
+	0%{transform:rotate(0deg);}
+	100%{transform:rotate(360deg);}
+}
+.m_footer progress{width: 210px;height: 4px;}
 
 .play-status .p_paly{width: 260px;height: 35px;display: float;overflow: hidden;}
 .p_paly h3{height: 35px;}
@@ -31,7 +37,7 @@ span,label{font-size:14px}
 .p_paly h3 div{width: 100px;height: 20px;font-size: 12px;}
 .p_paly .title{float: left;width: 100px;height: 30px;}
 .p_paly .p_btn{float:right;}
-.p_paly .p_btn span{padding:5px 10px 10px;}
+.p_paly .p_btn span{padding:2px 10px 10px;margin: 10px 0;}
 
 .m_content{margin:4.5em 0 5em 0;}
 .m_content .m_ku{display: flex;height: 40px;}
@@ -49,16 +55,18 @@ span,label{font-size:14px}
 .list li .download{position: absolute;right: 10px;top: 40%;width: 70px;}
 .list li .download span{padding: 0 10px;}
 
-.menu{ background:#000;color: #fff;  position:fixed;left:0;bottom: 10%;right: 0;border-top: 1px solid #dadada;padding: 10px 0 3.3em 0 ;z-index: 22225;display: none;}
+.menu{background:#000;color: #fff;  position:fixed;left:0;bottom: 10%;right: 0;border-top: 1px solid #dadada;padding: 10px 0 3.3em 0 ;z-index: 22225;display: none;}
 .menu h4{border-bottom: 1px solid #dadada;padding-bottom:5px; color: #08f;position: relative;}
 .menu h4 .num{padding: 0 10px;}
 .menu h4 .delete{position: absolute;right: 16%;top: 40%;}
 .menu .list{overflow-y:auto;height:15em;}
 
 
-.boxLeft{z-index: 1000;position: fixed;left:-100%;bottom: 0;width: 100%;height: 100%;background: rgba(0,0,0,0.1);}
-.m_left{font-size: 1.2em; width: 80%;height: 100%;background: #333;color: #fff;}
+.boxLeft{transition: left 1s; z-index: 1000;position: fixed;left:-100%;bottom: 0;width: 100%;height: 100%;background: rgba(0,0,0,0.3);}
 .boxLeft.show{left:0;}
+
+.m_left{font-size: 1.2em; width: 80%;height: 100%;background: #333;color: #fff;}
+
 .m_lhead{display: flex;align-items: center;height: 10%;border-bottom: 1px solid #000;}
 .m_lhead .m_logo{flex: 3;}
 .m_lhead .login{flex: 1;}
@@ -77,30 +85,16 @@ span,label{font-size:14px}
 .m_lfoot .closes{text-align: right;}
 
 
-.r_code{background:#000;position: fixed;left:100%;top:4em;width: 100%;height: 83%;}
-.r_code.active{left: 0;z-index: 300;}
+.r_code{background:#000;position: fixed;left:100%;top:4em;width: 100%;height: 83%;transition:left 1s;}
+.r_code.active{left: 0;z-index: 300; transition:left 1s;}
 .r_code .t_head{color: #fff;}
 .r_code .t_head .p_title{text-align: center;font-size: 1.5em;} 
 .r_code .t_head p{text-align: center;font-size: 1em;}
 .r_code .t_head .turn{padding: 10px;}
-/*#c_footer{padding: 10px;background:#333;z-index: 100;position: fixed;left:0;bottom: 0;right: 0;display: none;}*/
-/*.mc_footer{display: flex;height: 4.2em;justify-content: center;align-items: center;}*/
-/*.mc_foote .play-status{display: flex;flex-direction: column;}*/
-/*.play-status .prog{flex:1;display: flex;flex-direction: row;} 
-.play-status .prog progress{flex: 3;width: 300px;}
-.play-status .prog time{flex: 1;}
-.play-status .p_btn{flex:1;display: flex;flex-direction: row;}
-.play-status .p_btn span{flex: 1;padding-top: 5px;}
-.play-status .p_btn span:last-child{text-align: right;}
-*/
+
+
 .r_code .mc_content{color: #fff;line-height: 25px;width:80%;height:80%;font-size: 1.5em;overflow-y: auto;margin: 0 auto;}
 
-/*.r_code .menu{display: none;background:#000;color: #fff; position:fixed;left:0;bottom: 10%;right: 0;padding: 10px 0 3.3em 0 ;z-index:5;}
-.r_code .menu h4{padding-bottom:5px; color: #08f;position: relative;}
-.r_code .menu h4 .num{padding: 0 10px;}
-.r_code .menu h4 .delete{position: absolute;right: 16%;top: 40%;}
-.r_code .menu .list{overflow-y:auto;height:15em;}
-*/
 .s_content{z-index: 200; position: fixed;left:0;right: 0;top: 8%;background: red;width: 100%;height: 82%;display: none;overflow-y: auto;}
 .s_content.active{display: block;background: #fff;}
 
